LPS-115610 Fix empty state not aligned vertically on the object sidebar

--- a/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/_form_view.scss
+++ b/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/_form_view.scss
@@ -99,7 +99,7 @@
 
 		.sidebar-body {
 			background-color: transparent;
-			height: auto;
+			height: calc(100vh - 200px);
 			overflow-x: hidden;
 			padding-left: 20px;
 			padding-right: 30px;
